# cactus

./: BEGINNER_FRIENDLY_ISSUES.md  CONTRIBUTING.md  README.md  setup
android/: CMakeLists.txt  Cactus.android.kt  Cactus.common.kt  Cactus.ios.kt  Cactus.kt  README.md  cactus.def  cactus_jni.cpp
apple/: Cactus.swift  CmakeLists.txt  README.md  module.android.modulemap
cactus/: CMakeLists.txt  build.sh
cactus/engine/: engine.h  engine_bpe.cpp  engine_constraints.cpp  engine_model.cpp  engine_tokenizer.cpp
cactus/ffi/: cactus_complete.cpp  cactus_ffi.cpp  cactus_ffi.h  cactus_init.cpp  cactus_stream_transcribe.cpp  cactus_telemetry.h  cactus_utils.h  gemma_tools.h
cactus/graph/: graph.h  graph_builder.cpp  graph_core.cpp  graph_file.cpp  graph_ops.cpp
cactus/index/: index.cpp  index.h
cactus/kernel/: kernel.h  kernel_blas.cpp  kernel_conv.cpp  kernel_gemm.cpp  kernel_nn.cpp  kernel_quants.cpp  kernel_reduce.cpp  kernel_scalar.cpp  kernel_utils.h
cactus/npu/: npu.cpp
docs/: cactus_engine.md  finetuning.md
flutter/: README.md  build.sh  cactus.dart
flutter/lib/utils/: download.dart  download_test.dart
python/: README.md  example.py  pyproject.toml  requirements.txt
python/src/: __init__.py  cactus.py  cli.py  config_utils.py  converter_llm.py  converter_vlm.py  precision_config.py  publish_to_hf.py  tensor_io.py  tokenizer.py  weight_patterns.py
tests/: CMakeLists.txt  run.sh  test_engine.cpp  test_gemv_quant.cpp  test_graph.cpp  test_index.cpp  test_kernel.cpp  test_performance.cpp  test_streaming_mic.cpp  test_threading.cpp  test_utils.cpp  test_utils.h  whisper.sh
tests/android/: CMakeLists.txt  run.sh
tests/ios/: configure_xcode.rb  run.sh  setup_project.rb
tests/ios/CactusTest/CactusTest/: AppDelegate.h  AppDelegate.mm  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
tests/ios/CactusTest/CactusTest.xcodeproj/: project.pbxproj
tests/ios/CactusTest/CactusTest.xcodeproj/project.xcworkspace/xcuserdata/jakmro.xcuserdatad/: UserInterfaceState.xcuserstate
tests/ios/CactusTest/CactusTest.xcodeproj/xcuserdata/jakmro.xcuserdatad/xcschemes/: xcschememanagement.plist
tools/: convert_hf.py  example.py  requirements.txt
tools/src/: cactus_ffi.py  cli.py  publish_to_hf.py  tensor_io.py
