[project]
name = "cactus"
version = "0.1.0"
description = "Cactus Python tools"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "transformers",
    "numpy",
]

[project.optional-dependencies]
vlm = ["Pillow", "num2words", "torchvision"]
hub = ["huggingface_hub"]

[project.scripts]
cactus = "src.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
